--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <link href="/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="/fbinterest-static/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Pinterest clone home</title>
   </head>
   <body class='index'>
@@ -2333,6 +2333,6 @@
     </div>
     <div id='fb-root'></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
-    <script src="/javascripts/all.js" type="text/javascript"></script>
+    <script src="/fbinterest-static/javascripts/all.js" type="text/javascript"></script>
   </body>
 </html>
